--- a/res/layout/stcokdetail.xml
+++ b/res/layout/stcokdetail.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF" xmlns:android="http://schemas.android.com/apk/res/android">
-
+    android:background="#FFFFFF"
+    android:padding="1dip" >
+
     <TextView
         android:id="@+id/textViewstockname"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/textViewtime"
         android:layout_alignParentLeft="true"
@@ -15,7 +17,7 @@
         android:gravity="center_vertical"
         android:height="20dp"
         android:text="@string/stockdetailcodename"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="#ffffff" />
 
     <TextView
@@ -30,7 +32,7 @@
         android:text="@string/stockdetailnowprice"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="#000000" />
-
+
     <TextView
         android:id="@+id/textViewchangeprice"
         android:layout_width="wrap_content"
@@ -39,11 +41,10 @@
         android:layout_centerHorizontal="true"
         android:background="#00cc00"
         android:gravity="right"
-        android:minEms="3"
-        android:scrollHorizontally="true"
+        android:minEms="4"
         android:text="+0.00"
         android:textAppearance="?android:attr/textAppearanceMedium" />
-
+
     <TextView
         android:id="@+id/textViewhighprice"
         android:layout_width="wrap_content"
@@ -51,11 +52,13 @@
         android:layout_alignParentRight="true"
         android:layout_below="@+id/textViewtime"
         android:gravity="right"
+        android:maxEms="3"
+        android:maxLines="1"
         android:minEms="3"
         android:text="000.00"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="#000000" />
-
+
     <TextView
         android:id="@+id/textViewlowprice"
         android:layout_width="wrap_content"
@@ -63,6 +66,8 @@
         android:layout_alignBottom="@+id/textViewstockchangepercent"
         android:layout_alignParentRight="true"
         android:gravity="right"
+        android:maxEms="3"
+        android:maxLines="1"
         android:minEms="3"
         android:text="000.00"
         android:textAppearance="?android:attr/textAppearanceMedium"
@@ -133,60 +138,44 @@
         android:text="000.000"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="#000000" />
-
+
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/textViewopenprice"
         android:layout_alignBottom="@+id/textViewopenprice"
+        android:layout_alignRight="@+id/textViewstockchangepercent"
         android:layout_centerHorizontal="true"
         android:text="@string/stockdetailtradevolume"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="#000000" />
-
+
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/textViewyopenprice"
         android:layout_alignBottom="@+id/textViewyopenprice"
+        android:layout_alignRight="@+id/textView5"
         android:layout_centerHorizontal="true"
         android:text="@string/stockdetailvalue"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="#000000" />
-
-    <TextView
-        android:id="@+id/textViewdate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:background="#6699FF"
-        android:gravity="right"
-        android:maxEms="5"
-        android:minEms="4"
-        android:minHeight="25dp"
-        android:text="2008-01-11"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textColor="#ffffff" />
-
+
     <TextView
         android:id="@+id/textViewtime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textViewdate"
         android:layout_alignParentRight="true"
-        android:layout_below="@+id/textViewdate"
         android:background="#6699FF"
-        android:gravity="right"
-        android:maxEms="4"
+        android:gravity="center"
         android:minEms="4"
-        android:minHeight="25dp"
-        android:text="00:00AM"
+        android:minHeight="50dp"
+        android:text="00:00AM HKT"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="#ffffff" />
-
+
     <TextView
         android:id="@+id/textViewstockchangepercent"
         android:layout_width="wrap_content"
@@ -196,10 +185,10 @@
         android:layout_centerVertical="true"
         android:background="#00cc00"
         android:gravity="right"
-        android:minEms="3"
+        android:minEms="4"
         android:text="+0.000"
         android:textAppearance="?android:attr/textAppearanceMedium" />
-
+
     <TextView
         android:id="@+id/textViewttvolume"
         android:layout_width="wrap_content"
@@ -212,15 +201,14 @@
         android:text="000.000M"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="#000000" />
-
+
     <TextView
-        android:id="@+id/textViewmarketcap"
+        android:id="@+id/textViewmarketdivy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/textView6"
         android:layout_alignLeft="@+id/textViewttvolume"
         android:layout_alignParentRight="true"
-        android:layout_alignTop="@+id/textView6"
         android:maxEms="4"
         android:minEms="4"
         android:text="000.00M"
@@ -262,7 +250,7 @@
         android:id="@+id/textViewprofit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textViewmarketcap"
+        android:layout_alignLeft="@+id/textViewmarketdivy"
         android:layout_alignParentRight="true"
         android:layout_alignTop="@+id/textView8"
         android:text="000.0000"
@@ -294,18 +282,18 @@
     android:id="@+id/buttonstockadd"
     style="@style/ButtonText"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_height="40dip"
     android:layout_alignParentRight="true"
     android:layout_below="@+id/imageViewchart"
     android:layout_marginRight="10dip"
     android:background="@drawable/bluebtn"
     android:minEms="4"
     android:text="@string/stockdetailbuy" />
-
+
     <EditText
         android:id="@+id/editTextqty"
         android:layout_width="wrap_content"
-        android:layout_height="36dip"
+        android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/imageViewchart"
         android:layout_marginLeft="10dip"
@@ -317,11 +305,11 @@
 
         <requestFocus />       
     </EditText>
-    
+    
     <EditText
         android:id="@+id/editTextstockprice"
         android:layout_width="wrap_content"
-        android:layout_height="36dip"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/imageViewchart"
         android:layout_centerHorizontal="true"
         android:hint="@string/stockdetailprice"
