--- a/res/layout/stockchildslistview.xml
+++ b/res/layout/stockchildslistview.xml
@@ -79,11 +79,11 @@
             android:text="@string/stockchildsellprice"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="#000000" />
-
+
         <EditText
             android:id="@+id/editTextsellprice"
             android:layout_width="wrap_content"
-            android:layout_height="36dip"
+            android:layout_height="wrap_content"
             android:layout_below="@+id/textView5"
             android:layout_centerHorizontal="true"
             android:hint="0"
@@ -94,11 +94,11 @@
             android:textAppearance="?android:attr/textAppearanceMedium" >
 
         </EditText>
-
+
         <EditText
             android:id="@+id/editTextstockqty"
             android:layout_width="wrap_content"
-            android:layout_height="36dip"
+            android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/editTextsellprice"
             android:layout_alignBottom="@+id/editTextsellprice"
             android:layout_alignParentLeft="true"
@@ -106,15 +106,15 @@
             android:inputType="number"
             android:maxEms="6"
             android:minEms="4"
-            android:selectAllOnFocus="true"
             android:nextFocusDown="@+id/editTextsellprice"
+            android:selectAllOnFocus="true"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <Button
             android:id="@+id/buttonsell"
             style="@style/ButtonText"
             android:layout_width="wrap_content"
-            android:layout_height="36dip"
+            android:layout_height="40dip"
             android:layout_alignParentRight="true"
             android:layout_below="@+id/textView5"
             android:background="@drawable/yellowbtn"
@@ -220,12 +220,12 @@
             android:text="000000.00"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="#000000" />
-
+
         <Button
             android:id="@+id/buttonedit"
             style="@style/ButtonText"
             android:layout_width="wrap_content"
-            android:layout_height="36dip"
+            android:layout_height="40dip"
             android:layout_below="@+id/textViewamount"
             android:layout_toLeftOf="@+id/buttonsell"
             android:background="@drawable/bluebtn"
