--- a/res/layout/stockgrouplistview.xml
+++ b/res/layout/stockgrouplistview.xml
@@ -40,23 +40,24 @@
         android:text="000.00"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="#000000" />
-
+
     <TextView
         android:id="@+id/textViewStockChangeprice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignRight="@+id/textViewStockChangepercent"
         android:layout_toRightOf="@+id/textViewnowprice"
         android:minEms="3"
         android:text="+00.00"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="#000000" />
-
+
     <TextView
         android:id="@+id/textViewStockChangepercent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textViewStockChangeprice"
         android:layout_below="@+id/textViewStockChangeprice"
+        android:layout_toRightOf="@+id/textViewnowprice"
         android:minEms="3"
         android:text="+00.00%"
         android:textAppearance="?android:attr/textAppearanceSmall"
